--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "tslint": "^5.14.0",
+    "tslint-react": "^3.6.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
@@ -26,5 +28,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "prettier": "^1.16.4",
+    "tslint-config-prettier": "^1.18.0"
+  }
 }
