--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "@types/node": "11.11.3",
     "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
+    "antd": "^3.15.1",
+    "babel-plugin-import": "^1.11.0",
+    "customize-cra": "^0.2.12",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "react": "^16.8.4",
+    "react-app-rewired": "^2.1.1",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
     "tslint": "^5.14.0",
@@ -15,9 +21,9 @@
     "typescript": "3.3.3333"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
